@@ -23,12 +23,13 @@
 
 /*
  * @test
- * @bug      8225055 8239804 8246774
+ * @bug      8225055 8239804
  * @summary  Record types
  * @library  /tools/lib ../../lib
  * @modules jdk.javadoc/jdk.javadoc.internal.tool
  * @build    toolbox.ToolBox javadoc.tester.*
- * @run main TestRecordTypes
+ * @compile --enable-preview --source ${jdk.version} TestRecordTypes.java
+ * @run main/othervm --enable-preview TestRecordTypes
  */
 
 
@@ -68,6 +69,7 @@ public class TestRecordTypes extends JavadocTester {
         javadoc("-d", base.resolve("out").toString(),
                 "-quiet", "-noindex",
                 "-sourcepath", src.toString(),
+                "--enable-preview", "--source", thisRelease,
                 src.resolve("R.java").toString());
         checkExit(Exit.OK);
 
@@ -89,6 +91,7 @@ public class TestRecordTypes extends JavadocTester {
         javadoc("-d", base.resolve("out").toString(),
                 "-quiet", "-noindex",
                 "-sourcepath", src.toString(),
+                "--enable-preview", "--source", thisRelease,
                 "p");
         checkExit(Exit.OK);
 
@@ -110,6 +113,7 @@ public class TestRecordTypes extends JavadocTester {
         javadoc("-d", base.resolve("out").toString(),
                 "-quiet", "-noindex",
                 "-sourcepath", src.toString(),
+                "--enable-preview", "--source", thisRelease,
                 "p");
         checkExit(Exit.OK);
 
@@ -135,6 +139,7 @@ public class TestRecordTypes extends JavadocTester {
         javadoc("-d", base.resolve("out").toString(),
                 "-quiet", "-noindex",
                 "-sourcepath", src.toString(),
+                "--enable-preview", "--source", thisRelease,
                 "p");
         checkExit(Exit.OK);
 
@@ -166,6 +171,7 @@ public class TestRecordTypes extends JavadocTester {
         javadoc("-d", base.resolve("out").toString(),
                 "-quiet", "-noindex",
                 "-sourcepath", src.toString(),
+                "--enable-preview", "--source", thisRelease,
                 "p");
         checkExit(Exit.OK);
 
@@ -198,6 +204,7 @@ public class TestRecordTypes extends JavadocTester {
         javadoc("-d", base.resolve("out").toString(),
                 "-quiet", "-noindex",
                 "-sourcepath", src.toString(),
+                "--enable-preview", "--source", thisRelease,
                 "p");
         checkExit(Exit.OK);
 
@@ -261,6 +268,7 @@ public class TestRecordTypes extends JavadocTester {
                 "-quiet", "-noindex",
                 "-sourcepath", src.toString(),
                 "-linkoffline", externalDocs, localDocs,
+                "--enable-preview", "--source", thisRelease,
                 "p");
         checkExit(Exit.OK);
 
@@ -341,6 +349,7 @@ public class TestRecordTypes extends JavadocTester {
                 "-quiet", "-noindex",
                 "--no-platform-links",
                 "-sourcepath", src.toString(),
+                "--enable-preview", "--source", thisRelease,
                 "p");
         checkExit(Exit.OK);
 
@@ -366,6 +375,7 @@ public class TestRecordTypes extends JavadocTester {
         javadoc("-d", base.resolve("out").toString(),
                 "-quiet", "-noindex",
                 "-sourcepath", src.toString(),
+                "--enable-preview", "--source", thisRelease,
                 "p");
         checkExit(Exit.OK);
 
@@ -396,6 +406,7 @@ public class TestRecordTypes extends JavadocTester {
                 "-quiet", "-noindex",
                 "-sourcepath", testSrc.toString(),
                 "-linksource",
+                "--enable-preview", "--source", thisRelease,
                 "examples");
 
         checkExit(Exit.OK);
@@ -404,11 +415,13 @@ public class TestRecordTypes extends JavadocTester {
                 "-sourcepath", testSrc.toString(),
                 "-linksource",
                 "-linkoffline", externalDocs, localDocs,
+                "--enable-preview", "--source", thisRelease,
                 "examples");
         checkExit(Exit.OK);
     }
 
     @Test
+    @SuppressWarnings("preview")
     public void testAnnotations(Path base) throws IOException {
         ElementType[] types = {
                 ElementType.FIELD,
@@ -455,6 +468,7 @@ public class TestRecordTypes extends JavadocTester {
                 "--no-platform-links",
                 "-sourcepath", src.toString(),
                 "-private",
+                "--enable-preview", "--source", thisRelease,
                 "p");
         checkExit(Exit.OK);
 
